Spec change and server side try
